// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Watch mode flows Pressing "P" enters pattern mode 1`] = `
"<eraseLine>
<moveCursorToColumn1>
<eraseScreenDown>
 pattern › p
<saveCursorPosition>
<moveCursorToRow6Column13>
<restoreCursorPosition>
"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 2`] = `
"<eraseLine>
<moveCursorToColumn1>
<eraseScreenDown>
 pattern › p.
<saveCursorPosition>
<moveCursorToRow6Column14>
<restoreCursorPosition>
"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 3`] = `
"<eraseLine>
<moveCursorToColumn1>
<eraseScreenDown>
 pattern › p.*
<saveCursorPosition>
<moveCursorToRow6Column15>
<restoreCursorPosition>
"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 4`] = `
"<eraseLine>
<moveCursorToColumn1>
<eraseScreenDown>
 pattern › p.*1
<saveCursorPosition>
<moveCursorToRow6Column16>
<restoreCursorPosition>
"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 5`] = `
"<eraseLine>
<moveCursorToColumn1>
<eraseScreenDown>
 pattern › p.*10
<saveCursorPosition>
<moveCursorToRow6Column17>
<restoreCursorPosition>
"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 6`] = `
"<eraseLine>
<moveCursorToColumn1>
<eraseScreenDown>
 pattern › p.*1
<saveCursorPosition>
<moveCursorToRow6Column16>
<restoreCursorPosition>
"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 7`] = `
"<eraseLine>
<moveCursorToColumn1>
<eraseScreenDown>
 pattern › p.*
<saveCursorPosition>
<moveCursorToRow6Column15>
<restoreCursorPosition>
"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 8`] = `
"<eraseLine>
<moveCursorToColumn1>
<eraseScreenDown>
 pattern › p.*3
<saveCursorPosition>
<moveCursorToRow6Column16>
<restoreCursorPosition>
"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 9`] = `
Object {
  "onlyChanged": false,
  "passWithNoTests": true,
  "rootDir": "",
  "testPathPatterns": Object {
    "patterns": Array [
      "p.*3",
    ],
    "type": "TestPathPatterns",
  },
  "watch": true,
  "watchAll": false,
}
`;

exports[`Watch mode flows Pressing "c" clears the filters 1`] = `
"<hideCursor>
<clearTerminal>

<bold>Pattern Mode Usage</intensity>
 <dim>› Press</intensity> Esc <dim>to exit pattern mode.</intensity>
 <dim>› Press</intensity> Enter <dim>to filter by a filenames regex pattern.</intensity>


<showCursor>
<eraseLine>
<moveCursorToColumn1>
<eraseScreenDown>
 pattern › 
<saveCursorPosition>
<moveCursorToRow6Column12>
<restoreCursorPosition>
"
`;
